--- a/package.json
+++ b/package.json
@@ -44,22 +44,22 @@
     "jwt-decode": "^3.1.2",
     "moment": "2.29.4",
     "nouislider": "15.4.0",
-    "react": ">=16.0.0",
+    "react": "^18.0.0",
     "react-chartist": "^0.14.4",
     "react-chartjs-2": "^2.11.2",
     "react-copy-to-clipboard": "5.1.0",
     "react-data-table-component": "^7.5.2",
     "react-datepicker": "^4.20.0",
     "react-datetime": "3.2.0",
-    "react-dom": ">=16.0.0",
+    "react-dom": "^18.0.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.0",
     "react-icons": "^4.9.0",
-    "react-router-dom": "6.11.1",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.3",
     "react-to-print": "^2.14.15",
-    "react-toastify": "^10.0.6",
+    "react-toastify": "^11.0.3",
     "reactstrap": "8.10.0",
     "sass": "1.62.1",
     "stream-http": "^3.2.0",
@@ -69,10 +69,6 @@
     "util": "^0.12.5",
     "yup": "^1.2.0",
     "zxcvbn": "^4.4.2"
-  },
-  "peerDependencies": {
-    "react": ">=16.0.0",
-    "react-dom": ">=16.0.0"
   },
   "optionalDependencies": {
     "eslint-plugin-flowtype": "8.0.3",
